<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TeamFragment">

    <TextView
        style="@style/topBar"
        android:text="@string/team"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/devWorkers"
        android:fontFamily="@font/ys_display_bold"
        android:textSize="32sp"
        android:textColor="@color/ypBlack"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="16sp"
        android:text="@string/bestDevelopers"
        android:lineHeight="24sp"
        android:textColor="@color/ypBlack"
        android:paddingTop="24dp"
        android:paddingStart="16dp"/>

</LinearLayout>
