<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FiltersFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/filter_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_area"
        style="@style/filterButton"
        android:layout_width="@dimen/height0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/area_filter"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_industry"
        style="@style/filterButton"
        android:layout_width="@dimen/height0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/industry_filter"
        app:layout_constraintTop_toBottomOf="@id/filter_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salaryInputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_textview"
        android:paddingHorizontal="@dimen/margin16dp"
        android:paddingVertical="@dimen/margin8dp"
        android:layout_marginVertical="@dimen/margin24dp"
        android:layout_marginHorizontal="@dimen/margin16dp"
        app:layout_constraintTop_toBottomOf="@id/filter_industry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/salaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_tag"
            android:textColor="?attr/hintTextColor"
            android:textSize="12sp"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/salaryInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/salary_hint"
            android:textColorHint="?attr/hintTextColor"
            android:textColor="@color/uniBlack"
            android:textSize="@dimen/text16Sp"
            android:fontFamily="@font/ys_text_regular"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="number"
            android:singleLine="true"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/salaryLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hideWithoutSalary"
        style="@style/filterButton"
        android:layout_width="@dimen/height0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        android:drawableEnd="@drawable/ic_check_box_off_24"
        android:drawableTint="@color/blue"
        android:text="@string/hide_Wo_Salary"
        android:textColor="@color/ypBlack"
        app:layout_constraintTop_toBottomOf="@id/salaryInputContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/applyFilters"
        style="@style/applyFiltersButton"
        android:layout_width="@dimen/height0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16dp"
        android:text="@string/apply_filters"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dropFilters" />

    <Button
        android:id="@+id/dropFilters"
        style="@style/dropFiltersButton"
        android:layout_width="@dimen/height0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16dp"
        android:layout_marginBottom="@dimen/margin24dp"
        android:text="@string/drop_filters"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
