<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/industry_choice" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16dp"
        android:layout_marginVertical="@dimen/margin8dp"
        android:minHeight="@dimen/height48dp">

        <EditText
            android:id="@+id/searchInputText"
            style="@style/searchDisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/industry_choice"
            android:imeOptions="actionDone"
            android:minHeight="@dimen/height56dp"
            android:singleLine="true"
            android:textColor="@color/uniBlack" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close_24"
            android:visibility="gone"
            app:tint="@color/uniBlack" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        tools:itemCount="15"
        tools:listitem="@layout/industry_item" />

    <LinearLayout
        android:id="@+id/serverErrorLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="122dp"
            android:src="@drawable/il_areas_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="46dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/nothing_found_error"
            android:textColor="?attr/colorOnBackground"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notFoundErrorLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="122dp"
            android:src="@drawable/ic_nothing_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="46dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/industry_not_found"
            android:textColor="?attr/colorOnBackground"
            android:textSize="26sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="@dimen/basic_padding"
        android:background="@drawable/bg_button_rounded"
        android:backgroundTint="@color/blue"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:paddingVertical="@dimen/margin20dp"
        android:text="@string/btn_choice"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearanceMedium16"
        android:textColor="@color/white"
        android:visibility="visible"
        app:elevation="0dp" />

</LinearLayout>
