<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegionFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/region_selection" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basic_padding"
        android:layout_marginVertical="@dimen/small_padding">

        <EditText
            android:id="@+id/searchInputText"
            style="@style/searchDisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:hint="@string/search_region_hint"
            android:imeOptions="actionDone"
            android:minHeight="@dimen/height56dp"
            android:singleLine="true"
            android:textColor="@color/uniBlack" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close_24"
            android:visibility="gone"
            android:contentDescription="@null"
            app:tint="@color/uniBlack" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"

            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/basic_padding"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/placeHolderImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basic_padding"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearanceMedium22"
            android:textColor="@color/ypBlack"
            tools:text="@string/regions_not_found"
            tools:visibility="visible" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/areasList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/basic_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/filter_area_item"
        tools:visibility="gone" />

</LinearLayout>
