<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/work_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- БЛОК ВЫБОРА СТРАНЫ -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_container"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/country_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/country_action_icon" />

        <LinearLayout
            android:id="@+id/country_selected_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/country_action_icon">

            <TextView
                android:id="@+id/country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="12sp"
                android:textColor="@color/ypBlack" />

            <TextView
                android:id="@+id/country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ypBlack"
                tools:text="Россия" />
        </LinearLayout>

        <ImageView
            android:id="@+id/country_action_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- БЛОК ВЫБОРА РЕГИОНА  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/region_container"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/country_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/region_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/region_action_icon" />

        <LinearLayout
            android:id="@+id/region_selected_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/region_action_icon">

            <TextView
                android:id="@+id/region_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="12sp"
                android:textColor="@color/ypBlack" />

            <TextView
                android:id="@+id/region_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ypBlack"
                tools:text="Москва" />
        </LinearLayout>

        <ImageView
            android:id="@+id/region_action_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--  КНОПКА ВНИЗУ -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select"
        android:backgroundTint="@color/blue"
        android:visibility="gone"
        tools:visibility="visible"
        app:cornerRadius="12dp"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
